# bencode

./: .travis.yml  LICENSE  README.md  bencode.cabal
src/Data/: BEncode.hs
src/Data/BEncode/: Lexer.hs  Parser.hs  Reader.hs
tests/: DocTest.hs  HLint.hs  Haddock.hs  Spec.hs  doctests.hs
