Name:            bencode
Version:         0.5.0.1
Maintainer:      Lemmih (lemmih@gmail.com)
Author:          Lemmih (lemmih@gmail.com), Jesper Louis Andersen
Copyright:       (c) 2005-2009, David Himmelstrup,
                     2006 Lemmih <lemmih@gmail.com>,
                     2005 Jesper Louis Andersen <jlouis@mongers.org>
License-File:    LICENSE
License:         BSD3
Build-Type:      Simple
Category:        Text
Tested-With:     GHC == 7.8.3, GHC == 7.6.3
Cabal-Version:   >= 1.10
Synopsis:        Parser and printer for bencoded data.
Description:
  Parser and printer for bencoded data.
  .
  Bencode (pronounced like B encode) is the encoding used by the
  peer-to-peer file sharing system BitTorrent for storing and
  transmitting loosely structured data.


Source-Repository head
  type:     git
  location: https://github.com/creichert/bencode


Library
  GHC-Options:        -Wall
  Default-Extensions: PatternGuards
  Hs-Source-Dirs:     src
  Default-Language:   Haskell2010
  Exposed-Modules:    Data.BEncode
                      Data.BEncode.Lexer
                      Data.BEncode.Parser
  Build-Depends:      base<5
                    , parsec
                    , bytestring
                    , containers
                    , binary


Test-Suite doctest
  Type:             exitcode-stdio-1.0
  Main-is:          DocTest.hs
  Hs-Source-Dirs:   tests
  Ghc-Options:      -Wall
  Default-Language: Haskell2010
  Build-Depends:    base
                  , doctest == 0.9.*
                  , Glob    == 0.7.*


Test-Suite haddock
  Type:             exitcode-stdio-1.0
  Main-Is:          Haddock.hs
  Hs-Source-Dirs:   tests
  Ghc-Options:      -Wall
  Default-Language: Haskell2010
  Build-Depends:    base
                  , process
                  , regex-compat


Test-Suite hlint
    Type:             exitcode-stdio-1.0
    Main-Is:          HLint.hs
    Ghc-Options:      -Wall
    Hs-Source-Dirs:   tests
    Default-Language: Haskell2010
    Build-Depends:    base
                    , hlint == 1.8.*
                    , directory
